# vowelspace

./: README.md  example.txt  example2.txt  pyproject.toml
tests/: test_vowelspace.py
vowelspace/: cardinals.py  diagram.py  fmt.py  vowelbackness.py  vowelheight.py  vowelpos.py  vowelspos.py
