[tool.poetry]
name = "vowelspace"
version = "0.1.0"
description = ""
authors = ["brunoczim <brunoczim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scipy = "^1.5.4"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
vowelbackness = "vowelspace.vowelbackness:main"
vowelheight = "vowelspace.vowelheight:main"
vowelpos = "vowelspace.vowelpos:main"
vowelspos = "vowelspace.vowelspos:main"
